# curs_job_parser

./: README.md  class_vacancy.py  engine.py  main.py  pyproject.toml  storage_file_json.py  utils.py
