[tool.poetry]
name = "curs-job-parser"
version = "0.1.0"
description = ""
authors = ["gramm23 <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "curs_job_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
django-request = "^1.6.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
